--- a/app/modules/core/navigation/navbar.html
+++ b/app/modules/core/navigation/navbar.html
@@ -57,7 +57,7 @@
                     <img class="img-circle" src="assets/images/people/a5.jpg" alt="...">
                 </span>
           &nbsp;
-          Philip <strong>Smith</strong>&nbsp;
+          Tarun <strong>Bisht</strong>&nbsp;
                 <span class="circle bg-warning fw-bold">
                     13
                 </span>
@@ -70,34 +70,6 @@
         <div class="dropdown-menu animated animated-fast fadeInUp"
              sn-notifications-menu></div>
       </li>
-      <li class="dropdown" data-dropdown>
-        <a href class="dropdown-toggle" data-dropdown-toggle>
-          <i class="fa fa-cog fa-lg"></i>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a href="#"><i class="glyphicon glyphicon-user"></i> &nbsp; My Account</a></li>
-          <li class="divider"></li>
-          <li><a data-ui-sref="app.extra-calendar">Calendar</a></li>
-          <li><a data-ui-sref="app.inbox">Inbox &nbsp;&nbsp;<span class="badge bg-danger animated bounceIn">9</span></a></li>
-          <li class="divider"></li>
-          <li><a data-ui-sref="login"><i class="fa fa-sign-out"></i> &nbsp; Log Out</a></li>
-        </ul>
-      </li>
-      <li>
-        <a href="#" data-sn-action="toggle-chat-sidebar-state">
-          <i class="fa fa-globe fa-lg"></i>
-        </a>
-        <div id="chat-notification" class="chat-notification hide">
-          <div class="chat-notification-inner">
-            <h6 class="title">
-              <span class="thumb-xs">
-                  <img src="assets/images/people/a6.jpg" class="img-circle mr-xs pull-left">
-              </span>
-              Jess Smith
-            </h6>
-            <p class="text">Hey! What's up?</p>
-          </div>
-        </div>
       </li>
     </ul>
   </div>
